# tlp-charge-tray

./: .gitignore  AGENTS.md  LICENSE  README.md  meson.build
.github/workflows/: release.yml
data/: charge-controller-autostart.desktop  charge-controller.desktop  io.github.yousaf.ChargeController.policy  meson.build
debian/: changelog  control  copyright  postinst  rules
src/: charge-controller-helper.vala  charge-controller.vala  meson.build
