install_data(
  'charge-controller.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications'),
)

install_data(
  'charge-controller-autostart.desktop',
  install_dir: join_paths(get_option('sysconfdir'), 'xdg', 'autostart'),
)

install_data(
  'io.github.yousaf.ChargeController.policy',
  install_dir: join_paths(get_option('datadir'), 'polkit-1', 'actions'),
)

install_data(
  'charge-controller.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
)
